--- a/nextflow.config
+++ b/nextflow.config
@@ -6,4 +6,6 @@ manifest {
 /*  
  * default container 
  */
-process.container = 'philpalmer/hipstr'
+process.container = 'lifebitai/hipstr'
+
+docker.enabled = true
