Added bam preprocessing

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,12 +1,11 @@
 manifest {
-  description = 'HipSTR tool' 
+  description = 'HipSTR tool'
   author = 'Pablo Prieto Barja'
 }
 
-/*  
- * default container 
+/*
+ * default container
  */
-process.container = 'lifebitai/hipstr'
+//process.container = 'lifebitai/hipstr'
 
 docker.enabled = true
-
