--- a/nextflow.config
+++ b/nextflow.config
@@ -9,3 +9,27 @@ manifest {
 //process.container = 'lifebitai/hipstr'
 
 docker.enabled = true
+
+// Global default params, used in configs
+params {
+  genome = false
+  bam = false
+  bed= false
+  fai = false
+  //bai = false
+
+  outdir = "results"
+
+  // Params for the Read Group Line to be added just in case its needed.
+  rgid=4
+  rglb="lib1"
+  rgpl="illumina"
+  rgpu="unit1"
+  rgsm=20
+}
+
+profiles {
+  big_test {
+    includeConfig 'conf/big_test.config'
+  }
+}
