--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ params {
   bed= false
   fai = false
   //bai = false
+  
 
   outdir = "results"
 
@@ -26,6 +27,9 @@ params {
   rgpl="illumina"
   rgpu="unit1"
   rgsm=20
+  
+  // HipSTR params
+  minreads = 100
 }
 
 profiles {
