--- a/nextflow.config
+++ b/nextflow.config
@@ -17,9 +17,10 @@ params {
   bed= false
   fai = false
   //bai = false
-  
+
 
   outdir = "results"
+  skip_plot_vcf = false
 
   // Params for the Read Group Line to be added just in case its needed.
   rgid=4
@@ -27,7 +28,7 @@ params {
   rgpl="illumina"
   rgpu="unit1"
   rgsm=20
-  
+
   // HipSTR params
   minreads = 100
 }
